--- a/projects/Terraform.html
+++ b/projects/Terraform.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Terraform template for deploying VPC, Subnets, EC2, RDS & more</title>
-    <meta content="" name="descriptison">
+    <title>Terraform Template for Deploying VPC, Subnets, EC2, RDS & More</title>
+    <meta content="" name="description">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="../assets/img/favicon.png" rel="icon">
-    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../assets/img/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="../assets/img/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
 
     <!-- Google Fonts -->
     <link
@@ -32,6 +33,7 @@
         body {
             font-family: sans-serif;
         }
+
         h4 {
             font-family: sans-serif;
         }
@@ -61,117 +63,100 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>Terraform template for deploying VPC, Subnets, EC2, RDS & more</h2>
+                    <h2>Terraform Template for Deploying VPC, Subnets, EC2, RDS & More</h2>
                     <br>
                     <div class="row" style="text-align: center;">
                         <div class="col-lg-10" style="margin: auto;">
                             <a href="../index.html">
-                                <h3 style="text-align: left;">Rijul_Sahu</h1>
+                                <h3 style="text-align: left;">Rijul_Sahu</h3>
                             </a>
                             <p style="font-style: italic; text-align: left;">August, 2020</p><br>
                             <h4>
-                                <p style="text-align: left;">Developing AWS terraform template for CI/CD deployment.</p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left;">Applicable to all processes operating in AWS cloud
-                                    domain and wants to automate their cloud resource deployment.</p>
+                                <p style="text-align: left;">Developed reusable Terraform templates to automate AWS
+                                    infrastructure deployment and enable a CI/CD workflow for cloud resource
+                                    provisioning. The solution standardized DevOps practices and reduced manual
+                                    deployment overhead across multiple teams.</p>
                             </h4>
                             <br>
                             <img src="../assets/img/Terraform.png" alt="" width="50%" height="50%"><br>
                             <br>
-							<h4>
-                                <p style="text-align: left;">You can find source code here, <a href="https://github.com/rijulsahu/vpc-2subnets-ec2-rds" target="_blank">https://github.com/rijulsahu/vpc-2subnets-ec2-rds</p></a>
+                            <h4>
+                                <p style="text-align: left;">You can find source code here, <a
+                                        href="https://github.com/rijulsahu/vpc-2subnets-ec2-rds"
+                                        target="_blank">https://github.com/rijulsahu/vpc-2subnets-ec2-rds</a></p>
                             </h4>
                             <h1 style="text-align: left;">Description</h1>
                             <h4>
                                 <p style="text-align: left; font-family: sans-serif;">
-								The client, a leading European multinational online food-delivery service based in Berlin, Germany. 
-								The company operates in 40+ countries internationally in Europe, Asia, Latin America and the Middle East and partners with 500,000+ restaurants,
-                                    wanted to deploy their MMM(Market Mix Model) for multiple geography.</p>
+                                    The client, a leading European multinational online food-delivery company
+                                    headquartered in Berlin, operated across 40+ countries with partnerships exceeding
+                                    500,000 restaurants. To support the deployment of their Market Mix Model (MMM)
+                                    analytics solution across multiple geographies, the DevOps team required a fully
+                                    automated infrastructure setup.
+                                    Their existing resource deployment process was manual, time-intensive, and lacked
+                                    consistency. The goal was to design a scalable Terraform-based CI/CD framework for
+                                    automated, error-free AWS resource provisioning.</p>
                             </h4>
-                            <h4>
-                                <p style="text-align: left;">They faced challenges with their existing resource deployment techniques which were manual in nature.</p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left;">They wanted to develop a holistic
-                                    CI/CD solution for their DevOps team and automate the deployment process.
-                                </p>
-                            </h4>
-                            <!--h4>
-                                <p style="text-align: left;">It wanted to perform competitive analysis on KPIs like
-                                    price change, stock status, inventory, trend and matched articles with prominent
-                                    competitors
-                                    in the global market. The client’s existing technical architecture was incapable of
-                                    effectively addressing these limitations.</p>
-                            </h4-->
                             <br>
-                            <h1 style="text-align: left;">Challenges</h1>
-                            <h4>
-                                <p style="text-align: left;">The key challenges faced in this process were:</p>
-                            </h4>
-                            <ol>
-                                <h4>
-                                    <li style="text-align: left;">Time-consuming and manual cloud resource deployment.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Dependency on multiple IT vendors.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">No previous DevOps process implemented.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Inability to match ETAs.</li>
-                                </h4>
-                            </ol>
+                            <h1 style="text-align: left;">Key Challenges</h1>
+                            <ul style="text-align: left;">
+                                <li>
+                                    <h4>Manual and time-consuming setup of AWS cloud resources</h4>
+                                </li>
+                                <li>
+                                    <h4>Heavy dependency on multiple external IT vendors</h4>
+                                </li>
+                                <li>
+                                    <h4>Absence of formal DevOps processes</h4>
+                                </li>
+                                <li>
+                                    <h4>Delays in meeting project delivery timelines</h4>
+                                </li>
+                            </ul>
                             <br>
                             <h1 style="text-align: left;">Solution</h1>
                             <h4>
-                                <p style="text-align: left;">With the aim of reducing the end-to-end
-                                    time spent on manual and time-consuming activities in the AWS cloud resource deployment process.</p>
+                                <p style="text-align: left;">To streamline the infrastructure deployment workflow, I
+                                    designed and implemented an <strong>AWS Terraform template</strong> that:</p>
                             </h4>
+                            <ul style="text-align: left;">
+                                <li>
+                                    <h4>Creates a <strong>VPC</strong> with two <strong>subnets</strong> for network
+                                        segmentation</h4>
+                                </li>
+                                <li>
+                                    <h4>Launches <strong>EC2 instances</strong> to host applications and services</h4>
+                                </li>
+                                <li>
+                                    <h4>Provisions <strong>RDS instances</strong> for persistent data storage</h4>
+                                </li>
+                                <li>
+                                    <h4>Integrates seamlessly within the CI/CD pipeline for automated provisioning</h4>
+                                </li>
+                            </ul>
                             <h4>
-                                <p style="text-align: left;">I designed and developed AWS terraform template which 
-								launches 1 VPC, 2 subnets inside the VPC followed by launching EC2 instances and RDS.
-                                </p>
-                            </h4>
-                            <!--h4>
-                                <p style="text-align: left;">Earlier, because of technology incompetency,
-                                    it wasn’t feasible to process the data crawled for 6 months, this was solved
-                                    by storing all data into Hive tables in an optimized row columnar format and
-                                    using Apache Pig language for business logic and calculations.</p>
-                            </h4-->
-                            <h4>
-                                <p style="text-align: left;">This simplified and automated the AWS cloud resource deployment process
-								so that multipe teams can use cloud resources and can work accordingly.</p>
-                            </h4>
-                            <!--h4>
-                                <p style="text-align: left;">The entire process was automated from
-                                    the data loading layer to the end-user consumption layer.</p>
-                            </h4-->
-                            <h4>
-                                <p style="text-align: left;">My counterpart IT team also deployed
-                                    interactive website on the launched EC2 instances which runs the MMM model.</p>
+                                <p style="text-align: left;">This infrastructure framework allowed multiple teams to
+                                    deploy and manage resources independently with consistent configurations. The IT
+                                    team later used this environment to host an interactive web interface running the
+                                    MMM model on the newly created EC2 instances.</p>
                             </h4>
                             <br>
-                            <h1 style="text-align: left;">Benefits</h1>
-                            <h4>
-                                <p style="text-align: left;">Efforts in designing and implementing this solution led to:
-                                </p>
-                            </h4>
-                            <ol>
-                                <h4>
-                                    <li style="text-align: left;">In-house knowledge development
-                                        – no dependency on vendor.</li>
-                                </h4>
-                                <h4>
-                                    <li style="text-align: left;">Enabled DevOps CI/CD (continuous implementation / continuous deployment) working model.</li>
-                                </h4>
-                              
-                                <h4>
-                                    <li style="text-align: left;">Removed manual intervention –
-                                        error-free delivery.</li>
-                                </h4>
-                                
+                            <h1 style="text-align: left;">Key Benefits</h1>
+                            <ul style="text-align: left;">
+                                <li>
+                                    <h4>Established an internal knowledge base, removing vendor dependency</h4>
+                                </li>
+                                <li>
+                                    <h4>Enabled a full <strong>CI/CD-based DevOps</strong> implementation</h4>
+                                </li>
+                                <li>
+                                    <h4>Eliminated manual intervention, improving delivery accuracy and speed</h4>
+                                </li>
+                                <li>
+                                    <h4>Reduced deployment time while ensuring consistent, reproducible infrastructure
+                                        setups</h4>
+                                </li>
+                            </ul>
 
                         </div>
                     </div>
