--- a/index.html
+++ b/index.html
@@ -149,18 +149,14 @@
           <div class="row" style="text-align: center;">
             <div class="col-lg-10" style="margin: auto;">
               <h3>
-                <p style="text-align: left;">Hello, I'm Rijul. I help enterprises and organizations drive digital transformation.</p>
+                <p style="text-align: center;">Hello, I'm Rijul. I help enterprises and organizations drive digital transformation.</p>
               </h3><br>
               <h5>
-                <p style="text-align: left;">Lead Data Engineer with over 14 years of experience driving complex data transformations, building scalable analytics platforms, and leading high-performing engineering teams. Proven ability to architect and implement cloud-based data ecosystems, automate CI/CD deployments, and translate business needs into robust technical solutions. Currently seeking to leverage my comprehensive data expertise and cross-team collaboration skills to transition into a Solutions Architect role.
+                <p style="text-align: center;">My technical expertise spans the full stack of data analytics and automation, including distributed big data systems such as Hadoop, Spark, and Databricks; data warehousing with Snowflake; ETL processes; Python programming; dbt (data build tool); GitHub CI/CD workflows; and the AWS cloud platform.
                 </p>
               </h5> <br>
               <h5>
-                <p style="text-align: left;">My technical expertise spans the full stack of data analytics and automation, including distributed big data systems such as Hadoop, Spark, and Databricks; data warehousing with Snowflake; ETL processes; Python programming; dbt (data build tool); GitHub CI/CD workflows; and the AWS cloud platform.
-                </p>
-              </h5> <br>
-              <h5>
-                <p style="text-align: left;">When I'm not working on technology, I am focused on learning and upskilling myself in new technical and business skills.</p>
+                <p style="text-align: center;">When I'm not working on technology, I am focused on learning and upskilling myself in new technical and business skills.</p>
               </h5><br>
               <h4>
                 <p style="text-align: center;">I am on <a href="https://www.linkedin.com/in/rijul-sahu-242b59129/"
